[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
bimap = "0.6.2"
chrono = "0.4.23"
curl = "0.4.44"
itertools = "0.10.5"
lazy_static = "1.4.0"
ndarray = "0.15.6"
regex = "1.7.0"
